Fix design for days with holiday/vacation overlapping

--- a/app/assets/stylesheets/time_sheets.css.scss
+++ b/app/assets/stylesheets/time_sheets.css.scss
@@ -70,6 +70,12 @@
               font-weight: 400;
               font-style: italic;
             }
+
+            span.day-description {
+              display: block;
+              max-height: 40px;
+              overflow: hidden;
+            }
           }
 
           &:first-child {
